--- a/data/lang/bg.xml
+++ b/data/lang/bg.xml
@@ -788,7 +788,7 @@
     <tank ID="R126_Object_730_5" sName="Об. 268 5" lName="Обект 268 Вариант 5" />
     <tank ID="R127_T44_100_P" sName="T-44-100 (R)" lName="T-44-100 (R)" />
     <tank ID="R128_KV4_Kreslavskiy" sName="Кв-4 Кресл." lName="KV-4 Kreslavskiy" />
-    <tank ID="R129_Object_257" sName="Об. 257" lName="Обект 257" />
+    <tank ID="R129_Object_257" sName="Об. 257 П" lName="Обект 257 (П)" />
     <tank ID="R13_KV-1s" sName="КВ-1С" lName="КВ-1С" />
     <tank ID="R131_Tank_Gavalov" sName="ЛТГ" lName="ЛТГ" />
     <tank ID="R132_VNII_100LT" sName="Т-100 ЛТ" lName="Т-100 ЛТ" />
@@ -796,12 +796,18 @@
     <tank ID="R134_Object_252K" sName="Защитник" lName="Обект 252У Защитник" />
     <tank ID="R134_Object_252U" sName="Obj. 252U" lName="Обект 252У" />
     <tank ID="R135_T_103" sName="T-103" lName="T-103" />
+    <tank ID="R139_IS_2_Sh" sName="ИС-М" lName="ИС-М" />
     <tank ID="R14_SU-5" sName="СУ-5" lName="СУ-5" />
     <tank ID="R140_M4_Loza" sName="M4-A2 на Лоза" lName="M4-A2 Sherman на Лоза" />
     <tank ID="R143_T_29" sName="T-29" lName="T-29" />
+    <tank ID="R145_Object_705_A" sName="Об. 705А" lName="Обект 705А" />
     <tank ID="R146_STG" sName="СТГ" lName="СТГ" />
     <tank ID="R146_STG_Tday" sName="Гвардеец" lName="СТГ Гвардеец" />
+    <tank ID="R148_Object_430_U" sName="Об. 430У" lName="Обект 430У" />
+    <tank ID="R149_Object_268_4" sName="Об. 268 4" lName="Обект 268 Вариант 4" />
     <tank ID="R15_S-51" sName="С-51" lName="С-51" />
+    <tank ID="R151_Object_257_2" sName="Об. 257" lName="Обект 257" />
+    <tank ID="R153_Object_705" sName="Об. 705" lName="Обект 705" />
     <tank ID="R16_SU-18" sName="СУ-18" lName="СУ-18" />
     <tank ID="R17_SU-100" sName="СУ-100" lName="СУ-100" />
     <tank ID="R18_SU-152" sName="СУ-152" lName="СУ-152" />
@@ -879,9 +885,11 @@
     <tank ID="R90_IS_4M" sName="ИС-4" lName="ИС-4" />
     <tank ID="R91_SU14_1" sName="СУ-14-1" lName="СУ-14-1" />
     <tank ID="R93_Object263" sName="Об. 263" lName="Обект 263" />
+    <tank ID="R93_Object263B" sName="Об. 263Б" lName="Обект 263Б" />
     <tank ID="R95_Object_907" sName="Об. 907" lName="Обект 907" />
     <tank ID="R95_Object_907A" sName="Об. 907A" lName="Обект 907A" />
     <tank ID="R96_Object_430" sName="Об. 430" lName="Обект 430" />
+    <tank ID="R96_Object_430B" sName="Об. 430Б" lName="Обект 430Б" />
     <tank ID="R97_Object_140" sName="Об. 140" lName="Обект 140" />
     <tank ID="R98_T44_85" sName="Т-44-85" lName="Т-44-85" />
     <tank ID="R98_T44_85M" sName="Т-44 ол." lName="T-44 олекотен" />
@@ -2092,7 +2100,7 @@
     <PM name="САУ-9: Косвени поражения" short="\&quot;StuG IV\&quot;: САУ-9" desc="Мощните осколъчно-фугасни снаряди могат не само да намалят точките живот на вражеските машини, но има голяма вероятност да унищожат модули или да ранят членове на екипажа при взрива на осколките." tMID="69" opID="1" mID="9" setID="5" ID="quest_1_5_9_main" secID="quest_1_5_9_add" minLvl="4" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;StuG IV\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 3 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 3 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Survive</req>
@@ -2806,7 +2814,7 @@ or
     <PM name="САУ-9: Косвени поражения" short="\&quot;T28 heavy tank concept\&quot;: САУ-9" desc="Мощните осколъчно-фугасни снаряди могат не само да намалят точките живот на вражеските машини, но има голяма вероятност да унищожат модули или да ранят членове на екипажа при взрива на осколките." tMID="144" opID="2" mID="9" setID="5" ID="quest_2_5_9_main" secID="quest_2_5_9_add" minLvl="5" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;T28 heavy tank concept\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 5 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 5 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -3537,7 +3545,7 @@ or
     <PM name="САУ-9: Косвени поражения" short="T 55A: САУ-9" desc="Мощните осколъчно-фугасни снаряди могат не само да намалят точките живот на вражеските машини, но има голяма вероятност да унищожат модули или да ранят членове на екипажа при взрива на осколките." tMID="219" opID="3" mID="9" setID="5" ID="quest_3_5_9_main" secID="quest_3_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 8 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 8 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Remain unspotted throughout the entire battle
@@ -4271,7 +4279,7 @@ or
     <PM name="САУ-9: Косвени поражения" short="\&quot;Обект 260\&quot;: САУ-9" desc="Мощните осколъчно-фугасни снаряди могат не само да намалят точките живот на вражеските машини, но има голяма вероятност да унищожат модули или да ранят членове на екипажа при взрива на осколките." tMID="294" opID="4" mID="9" setID="5" ID="quest_4_5_9_main" secID="quest_4_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;Обект 260\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy 10 internal modules or injure 10 crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 10 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Remain unspotted throughout the entire battle
@@ -4979,7 +4987,7 @@ or
     <PM name="САУ-9: Косвени поражения" short="\&quot;StuG IV\&quot;: САУ-9" desc="Мощните осколъчно-фугасни снаряди могат не само да намалят точките живот на вражеските машини, но има голяма вероятност да унищожат модули или да ранят членове на екипажа при взрива на осколките." tMID="69" opID="1" mID="9" setID="5" ID="fallout_1_5_9_main" secID="fallout_1_5_9_add" minLvl="4" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;StuG IV\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 3 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 3 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Survive</req>
@@ -5693,7 +5701,7 @@ or
     <PM name="САУ-9: Косвени поражения" short="\&quot;T28 heavy tank concept\&quot;: САУ-9" desc="Мощните осколъчно-фугасни снаряди могат не само да намалят точките живот на вражеските машини, но има голяма вероятност да унищожат модули или да ранят членове на екипажа при взрива на осколките." tMID="144" opID="2" mID="9" setID="5" ID="fallout_2_5_9_main" secID="fallout_2_5_9_add" minLvl="5" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;T28 heavy tank concept\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 5 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 5 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -6424,7 +6432,7 @@ or
     <PM name="САУ-9: Косвени поражения" short="T 55A: САУ-9" desc="Мощните осколъчно-фугасни снаряди могат не само да намалят точките живот на вражеските машини, но има голяма вероятност да унищожат модули или да ранят членове на екипажа при взрива на осколките." tMID="219" opID="3" mID="9" setID="5" ID="fallout_3_5_9_main" secID="fallout_3_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 8 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 8 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Remain unspotted throughout the entire battle
@@ -7158,7 +7166,7 @@ or
     <PM name="САУ-9: Косвени поражения" short="\&quot;Обект 260\&quot;: САУ-9" desc="Мощните осколъчно-фугасни снаряди могат не само да намалят точките живот на вражеските машини, но има голяма вероятност да унищожат модули или да ранят членове на екипажа при взрива на осколките." tMID="294" opID="4" mID="9" setID="5" ID="fallout_4_5_9_main" secID="fallout_4_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Дългоочакваното подкрепление" reward="\&quot;Обект 260\&quot;">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy 10 internal modules or injure 10 crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 10 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Remain unspotted throughout the entire battle
