--- a/data/lang/de.xml
+++ b/data/lang/de.xml
@@ -688,7 +688,7 @@
     <tank ID="Object_140_fallout" sName="Obj. 140 (D)" lName="Objekt 140 (D)" />
     <tank ID="Object_212" sName="212A" lName="212A" />
     <tank ID="Object_261" sName="Obj. 261" lName="Objekt 261" />
-    <tank ID="Object_430" sName="Obj. 430" lName="Objekt 430" />
+    <tank ID="Object_430" sName="Obj. 430" lName="Object 430" />
     <tank ID="Object_704" sName="Obj. 704" lName="Objekt 704" />
     <tank ID="Object_907" sName="Obj. 907" lName="Objekt 907" />
     <tank ID="Object_907A" sName="Obj. 907A" lName="Objekt 907A" />
@@ -788,7 +788,7 @@
     <tank ID="R126_Object_730_5" sName="Obj. 268 5" lName="Objekt 268 Version V" />
     <tank ID="R127_T44_100_P" sName="T-44-100 (R)" lName="T-44-100 (R)" />
     <tank ID="R128_KV4_Kreslavskiy" sName="KV-4 Kresl." lName="KV-4 von Kreslawski" />
-    <tank ID="R129_Object_257" sName="Obj. 257" lName="Objekt 257" />
+    <tank ID="R129_Object_257" sName="Obj. 257 (P)" lName="Objekt 257 (P)" />
     <tank ID="R13_KV-1s" sName="KV-1S" lName="KV-1S" />
     <tank ID="R131_Tank_Gavalov" sName="LTG" lName="LTG" />
     <tank ID="R132_VNII_100LT" sName="T-100 LT" lName="T-100 LT" />
@@ -796,12 +796,18 @@
     <tank ID="R134_Object_252K" sName="Defender" lName="Objekt 252U Defender" />
     <tank ID="R134_Object_252U" sName="Obj. 252U" lName="Object 252U" />
     <tank ID="R135_T_103" sName="T-103" lName="T-103" />
+    <tank ID="R139_IS_2_Sh" sName="IS-M" lName="IS-M" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
     <tank ID="R140_M4_Loza" sName="Lozas M4-A2" lName="Lozas M4-A2 Sherman" />
     <tank ID="R143_T_29" sName="T-29" lName="T-29" />
+    <tank ID="R145_Object_705_A" sName="Obj. 705A" lName="Objekt 705A" />
     <tank ID="R146_STG" sName="STG" lName="STG" />
     <tank ID="R146_STG_Tday" sName="Garde" lName="STG Garde" />
+    <tank ID="R148_Object_430_U" sName="Obj. 430U" lName="Objekt 430U" />
+    <tank ID="R149_Object_268_4" sName="Obj. 268 4" lName="Objekt 268 Version 4" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
+    <tank ID="R151_Object_257_2" sName="Obj. 257" lName="Objekt 257" />
+    <tank ID="R153_Object_705" sName="Obj. 705" lName="Objekt 705" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
     <tank ID="R18_SU-152" sName="SU-152" lName="SU-152" />
@@ -879,9 +885,11 @@
     <tank ID="R90_IS_4M" sName="IS-4" lName="IS-4" />
     <tank ID="R91_SU14_1" sName="SU-14-1" lName="SU-14-1" />
     <tank ID="R93_Object263" sName="Obj. 263" lName="Objekt 263" />
+    <tank ID="R93_Object263B" sName="Obj. 263B" lName="Objekt 263B" />
     <tank ID="R95_Object_907" sName="Obj. 907" lName="Objekt 907" />
     <tank ID="R95_Object_907A" sName="Obj. 907A" lName="Objekt 907A" />
     <tank ID="R96_Object_430" sName="Obj. 430" lName="Objekt 430" />
+    <tank ID="R96_Object_430B" sName="Obj. 430B" lName="Objekt 430B" />
     <tank ID="R97_Object_140" sName="Obj. 140" lName="Objekt 140" />
     <tank ID="R98_T44_85" sName="T-44-85" lName="T-44-85" />
     <tank ID="R98_T44_85M" sName="T-44 lt." lName="T-44 leicht" />
@@ -2092,7 +2100,7 @@
     <PM name="SFL-9: Kollateralschaden" short="StuG IV: SFL-9" desc="Schlagkräftige Sprenggranaten verringern nicht nur die Strukturpunkte eines Gegnerfahrzeugs, es besteht auch eine gute Chance, mit der Flächenwirkung Module zu zerstören oder Besatzungsmitglieder zu verletzen." tMID="69" opID="1" mID="9" setID="5" ID="quest_1_5_9_main" secID="quest_1_5_9_add" minLvl="4" maxLvl="10" campID="1" camp="Die langersehnte Unterstützung" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Zerstören Sie interne Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 3 Module oder Besatzungsmitglieder</req>
+        <req>•  Zerstören Sie Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 3 Module oder Besatzungsmitglieder</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Überleben</req>
@@ -2806,7 +2814,7 @@ oder
     <PM name="SFL-9: Kollateralschaden" short="T28 Heavy Tank Concept: SFL-9" desc="Schlagkräftige Sprenggranaten verringern nicht nur die Strukturpunkte eines Gegnerfahrzeugs, es besteht auch eine gute Chance, mit der Flächenwirkung Module zu zerstören oder Besatzungsmitglieder zu verletzen." tMID="144" opID="2" mID="9" setID="5" ID="quest_2_5_9_main" secID="quest_2_5_9_add" minLvl="5" maxLvl="10" campID="1" camp="Die langersehnte Unterstützung" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Zerstören Sie interne Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 5 Module und Besatzungsmitglieder</req>
+        <req>•  Zerstören Sie Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 5 Module und Besatzungsmitglieder</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Gewinnen
@@ -3537,7 +3545,7 @@ oder
     <PM name="SFL-9: Kollateralschaden" short="T 55A: SFL-9" desc="Schlagkräftige Sprenggranaten verringern nicht nur die Strukturpunkte eines Gegnerfahrzeugs, es besteht auch eine gute Chance, mit der Flächenwirkung Module zu zerstören oder Besatzungsmitglieder zu verletzen." tMID="219" opID="3" mID="9" setID="5" ID="quest_3_5_9_main" secID="quest_3_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Die langersehnte Unterstützung" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Zerstören Sie interne Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 8 Module und Besatzungsmitglieder</req>
+        <req>•  Zerstören Sie Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 8 Module und Besatzungsmitglieder</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Bleiben Sie im gesamten Gefecht unentdeckt
@@ -4271,7 +4279,7 @@ oder
     <PM name="SFL-9: Kollateralschaden" short="Objekt 260: SFL-9" desc="Schlagkräftige Sprenggranaten verringern nicht nur die Strukturpunkte eines Gegnerfahrzeugs, es besteht auch eine gute Chance, mit der Flächenwirkung Module zu zerstören oder Besatzungsmitglieder zu verletzen." tMID="294" opID="4" mID="9" setID="5" ID="quest_4_5_9_main" secID="quest_4_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Die langersehnte Unterstützung" reward="Objekt 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Zerstören Sie 10 interne Module oder verletzen Sie 10 Besatzungsmitglieder</req>
+        <req>•  Zerstören Sie Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 10 Module und Besatzungsmitglieder</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Bleiben Sie im gesamten Gefecht unentdeckt
@@ -4979,7 +4987,7 @@ oder
     <PM name="SFL-9: Kollateralschaden" short="StuG IV: SFL-9" desc="Schlagkräftige Sprenggranaten verringern nicht nur die Strukturpunkte eines Gegnerfahrzeugs, es besteht auch eine gute Chance, mit der Flächenwirkung Module zu zerstören oder Besatzungsmitglieder zu verletzen." tMID="69" opID="1" mID="9" setID="5" ID="fallout_1_5_9_main" secID="fallout_1_5_9_add" minLvl="4" maxLvl="10" campID="1" camp="Die langersehnte Unterstützung" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Zerstören Sie interne Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 3 Module oder Besatzungsmitglieder</req>
+        <req>•  Zerstören Sie Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 3 Module oder Besatzungsmitglieder</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Überleben</req>
@@ -5693,7 +5701,7 @@ oder
     <PM name="SFL-9: Kollateralschaden" short="T28 Heavy Tank Concept: SFL-9" desc="Schlagkräftige Sprenggranaten verringern nicht nur die Strukturpunkte eines Gegnerfahrzeugs, es besteht auch eine gute Chance, mit der Flächenwirkung Module zu zerstören oder Besatzungsmitglieder zu verletzen." tMID="144" opID="2" mID="9" setID="5" ID="fallout_2_5_9_main" secID="fallout_2_5_9_add" minLvl="5" maxLvl="10" campID="1" camp="Die langersehnte Unterstützung" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Zerstören Sie interne Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 5 Module und Besatzungsmitglieder</req>
+        <req>•  Zerstören Sie Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 5 Module und Besatzungsmitglieder</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Gewinnen
@@ -6424,7 +6432,7 @@ oder
     <PM name="SFL-9: Kollateralschaden" short="T 55A: SFL-9" desc="Schlagkräftige Sprenggranaten verringern nicht nur die Strukturpunkte eines Gegnerfahrzeugs, es besteht auch eine gute Chance, mit der Flächenwirkung Module zu zerstören oder Besatzungsmitglieder zu verletzen." tMID="219" opID="3" mID="9" setID="5" ID="fallout_3_5_9_main" secID="fallout_3_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Die langersehnte Unterstützung" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Zerstören Sie interne Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 8 Module und Besatzungsmitglieder</req>
+        <req>•  Zerstören Sie Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 8 Module und Besatzungsmitglieder</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Bleiben Sie im gesamten Gefecht unentdeckt
@@ -7158,7 +7166,7 @@ oder
     <PM name="SFL-9: Kollateralschaden" short="Objekt 260: SFL-9" desc="Schlagkräftige Sprenggranaten verringern nicht nur die Strukturpunkte eines Gegnerfahrzeugs, es besteht auch eine gute Chance, mit der Flächenwirkung Module zu zerstören oder Besatzungsmitglieder zu verletzen." tMID="294" opID="4" mID="9" setID="5" ID="fallout_4_5_9_main" secID="fallout_4_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Die langersehnte Unterstützung" reward="Objekt 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Zerstören Sie 10 interne Module oder verletzen Sie 10 Besatzungsmitglieder</req>
+        <req>•  Zerstören Sie Module oder verletzen Sie Besatzungsmitglieder, insgesamt mindestens 10 Module und Besatzungsmitglieder</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Bleiben Sie im gesamten Gefecht unentdeckt
