--- a/data/lang/lt.xml
+++ b/data/lang/lt.xml
@@ -788,7 +788,7 @@
     <tank ID="R126_Object_730_5" sName="Obj. 268 5" lName="Objektas 268 versija V" />
     <tank ID="R127_T44_100_P" sName="T-44-100 (R)" lName="T-44-100 (R)" />
     <tank ID="R128_KV4_Kreslavskiy" sName="KV-4 Kresl." lName="KV-4 Kreslavskio" />
-    <tank ID="R129_Object_257" sName="Obj. 257" lName="Objektas 257" />
+    <tank ID="R129_Object_257" sName="Obj. 257 P" lName="Object 257 (P)" />
     <tank ID="R13_KV-1s" sName="KV-1S" lName="KV-1S" />
     <tank ID="R131_Tank_Gavalov" sName="LTG" lName="LTG" />
     <tank ID="R132_VNII_100LT" sName="T-100 LT" lName="T-100 LT" />
@@ -796,12 +796,18 @@
     <tank ID="R134_Object_252K" sName="Defender" lName="Objektas 252U Defender" />
     <tank ID="R134_Object_252U" sName="Obj. 252U" lName="Objektas 252U" />
     <tank ID="R135_T_103" sName="T-103" lName="T-103" />
+    <tank ID="R139_IS_2_Sh" sName="IS-M" lName="IS-M" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
     <tank ID="R140_M4_Loza" sName="Loza M4-A2" lName="Loza M4-A2 Sherman" />
     <tank ID="R143_T_29" sName="T-29" lName="T-29" />
+    <tank ID="R145_Object_705_A" sName="Obj. 705A" lName="Objektas 705A" />
     <tank ID="R146_STG" sName="STG" lName="STG" />
     <tank ID="R146_STG_Tday" sName="Gvardietis" lName="STG Gvardietis" />
+    <tank ID="R148_Object_430_U" sName="Obj. 430U" lName="Objektas 430U" />
+    <tank ID="R149_Object_268_4" sName="Obj. 268 4" lName="Objektas 268 Versija 4" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
+    <tank ID="R151_Object_257_2" sName="Obj. 257" lName="Objektas 257" />
+    <tank ID="R153_Object_705" sName="Obj. 705" lName="Objektas 705" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
     <tank ID="R18_SU-152" sName="SU-152" lName="SU-152" />
@@ -879,9 +885,11 @@
     <tank ID="R90_IS_4M" sName="IS-4" lName="IS-4" />
     <tank ID="R91_SU14_1" sName="SU-14-1" lName="SU-14-1" />
     <tank ID="R93_Object263" sName="Obj. 263" lName="Objektas 263" />
+    <tank ID="R93_Object263B" sName="Obj. 263B" lName="Objektas 263B" />
     <tank ID="R95_Object_907" sName="Obj. 907" lName="Objektas 907" />
     <tank ID="R95_Object_907A" sName="Obj. 907A" lName="Objektas 907A" />
     <tank ID="R96_Object_430" sName="Obj. 430" lName="Objektas 430" />
+    <tank ID="R96_Object_430B" sName="Obj. 430B" lName="Objektas 430B" />
     <tank ID="R97_Object_140" sName="Obj. 140" lName="Objektas 140" />
     <tank ID="R98_T44_85" sName="T-44-85" lName="T-44-85" />
     <tank ID="R98_T44_85M" sName="T-44 palengv." lName="T-44 palengvintas" />
@@ -1988,7 +1996,7 @@
         <req>•  Win</req>
       </Secondary>
     </PM>
-    <PM name="SPP-1: Tankų medžiotojai" short="StuG IV: SPP-1" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="58" opID="1" mID="13" setID="4" ID="quest_1_4_13_main" secID="quest_1_4_13_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="StuG IV">
+    <PM name="SPP-13: Tankų medžiotojai" short="StuG IV: SPP-13" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="58" opID="1" mID="13" setID="4" ID="quest_1_4_13_main" secID="quest_1_4_13_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="StuG IV">
       <Hint>Dauguma SPP pasižymi puikia vieno šūvio žala. Žaisdami būryje koordinuokite šaudymą. Mažai priešininkų sugebėtų atsilaikyti prieš tokią jėgą.</Hint>
       <Primary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Destroy 3 vehicles (Personal/Platoon)</req>
@@ -2092,7 +2100,7 @@
     <PM name="SAP-9: Netiesioginė žala" short="StuG IV: SAP-9" desc="Galingi fugasiniai sviediniai ne tik daro tiesioginę žalą priešų mašinoms, bet turi ir didelę tikimybę sunaikinti modulius ar įgulos narius sprogimo skeveldromis." tMID="69" opID="1" mID="9" setID="5" ID="quest_1_5_9_main" secID="quest_1_5_9_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 3 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 3 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Survive</req>
@@ -2702,7 +2710,7 @@ or
         <req>•  Win</req>
       </Secondary>
     </PM>
-    <PM name="SPP-1: Tankų medžiotojai" short="T28 Heavy Tank Concept: SPP-1" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="133" opID="2" mID="13" setID="4" ID="quest_2_4_13_main" secID="quest_2_4_13_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T28 Heavy Tank Concept">
+    <PM name="SPP-13: Tankų medžiotojai" short="T28 Heavy Tank Concept: SPP-13" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="133" opID="2" mID="13" setID="4" ID="quest_2_4_13_main" secID="quest_2_4_13_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T28 Heavy Tank Concept">
       <Hint>Dauguma SPP pasižymi puikia vieno šūvio žala. Žaisdami būryje koordinuokite šaudymą. Mažai priešininkų sugebėtų atsilaikyti prieš tokią jėgą.</Hint>
       <Primary fXP="750" cr="50000" slots="0" tokens="1" done="false">
         <req>•  Destroy 4 vehicles (personal/Platoon)</req>
@@ -2806,7 +2814,7 @@ or
     <PM name="SAP-9: Netiesioginė žala" short="T28 Heavy Tank Concept: SAP-9" desc="Galingi fugasiniai sviediniai ne tik daro tiesioginę žalą priešų mašinoms, bet turi ir didelę tikimybę sunaikinti modulius ar įgulos narius sprogimo skeveldromis." tMID="144" opID="2" mID="9" setID="5" ID="quest_2_5_9_main" secID="quest_2_5_9_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 5 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 5 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -3429,7 +3437,7 @@ or
 •  Survive</req>
       </Secondary>
     </PM>
-    <PM name="SPP-1: Tankų medžiotojai" short="T 55A: SPP-1" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="208" opID="3" mID="13" setID="4" ID="quest_3_4_13_main" secID="quest_3_4_13_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T 55A">
+    <PM name="SPP-13: Tankų medžiotojai" short="T 55A: SPP-13" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="208" opID="3" mID="13" setID="4" ID="quest_3_4_13_main" secID="quest_3_4_13_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T 55A">
       <Hint>Dauguma SPP pasižymi puikia vieno šūvio žala. Žaisdami būryje koordinuokite šaudymą. Mažai priešininkų sugebėtų atsilaikyti prieš tokią jėgą.</Hint>
       <Primary fXP="2000" cr="0" slots="0" tokens="1" done="false">
         <req>•  Destroy 5 vehicles (personal/Platoon)</req>
@@ -3537,7 +3545,7 @@ or
     <PM name="SAP-9: Netiesioginė žala" short="T 55A: SAP-9" desc="Galingi fugasiniai sviediniai ne tik daro tiesioginę žalą priešų mašinoms, bet turi ir didelę tikimybę sunaikinti modulius ar įgulos narius sprogimo skeveldromis." tMID="219" opID="3" mID="9" setID="5" ID="quest_3_5_9_main" secID="quest_3_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 8 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 8 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Remain unspotted throughout the entire battle
@@ -4163,7 +4171,7 @@ or
 •  Survive</req>
       </Secondary>
     </PM>
-    <PM name="SPP-1: Tankų medžiotojai" short="Objektas 260: SPP-1" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="283" opID="4" mID="13" setID="4" ID="quest_4_4_13_main" secID="quest_4_4_13_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="Objektas 260">
+    <PM name="SPP-13: Tankų medžiotojai" short="Objektas 260: SPP-13" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="283" opID="4" mID="13" setID="4" ID="quest_4_4_13_main" secID="quest_4_4_13_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="Objektas 260">
       <Hint>Dauguma SPP pasižymi puikia vieno šūvio žala. Žaisdami būryje koordinuokite šaudymą. Mažai priešininkų sugebėtų atsilaikyti prieš tokią jėgą.</Hint>
       <Primary fXP="4000" cr="0" slots="0" tokens="1" done="false">
         <req>•  Destroy 6 vehicles (personal/Platoon)</req>
@@ -4271,7 +4279,7 @@ or
     <PM name="SAP-9: Netiesioginė žala" short="Objektas 260: SAP-9" desc="Galingi fugasiniai sviediniai ne tik daro tiesioginę žalą priešų mašinoms, bet turi ir didelę tikimybę sunaikinti modulius ar įgulos narius sprogimo skeveldromis." tMID="294" opID="4" mID="9" setID="5" ID="quest_4_5_9_main" secID="quest_4_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="Objektas 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy 10 internal modules or injure 10 crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 10 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Remain unspotted throughout the entire battle
@@ -4875,7 +4883,7 @@ or
         <req>•  Win</req>
       </Secondary>
     </PM>
-    <PM name="SPP-1: Tankų medžiotojai" short="StuG IV: SPP-1" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="58" opID="1" mID="13" setID="4" ID="fallout_1_4_13_main" secID="fallout_1_4_13_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="StuG IV">
+    <PM name="SPP-13: Tankų medžiotojai" short="StuG IV: SPP-13" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="58" opID="1" mID="13" setID="4" ID="fallout_1_4_13_main" secID="fallout_1_4_13_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="StuG IV">
       <Hint>Dauguma SPP pasižymi puikia vieno šūvio žala. Žaisdami būryje koordinuokite šaudymą. Mažai priešininkų sugebėtų atsilaikyti prieš tokią jėgą.</Hint>
       <Primary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Destroy 3 vehicles (Personal/Platoon)</req>
@@ -4979,7 +4987,7 @@ or
     <PM name="SAP-9: Netiesioginė žala" short="StuG IV: SAP-9" desc="Galingi fugasiniai sviediniai ne tik daro tiesioginę žalą priešų mašinoms, bet turi ir didelę tikimybę sunaikinti modulius ar įgulos narius sprogimo skeveldromis." tMID="69" opID="1" mID="9" setID="5" ID="fallout_1_5_9_main" secID="fallout_1_5_9_add" minLvl="4" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="StuG IV">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 3 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 3 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Survive</req>
@@ -5589,7 +5597,7 @@ or
         <req>•  Win</req>
       </Secondary>
     </PM>
-    <PM name="SPP-1: Tankų medžiotojai" short="T28 Heavy Tank Concept: SPP-1" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="133" opID="2" mID="13" setID="4" ID="fallout_2_4_13_main" secID="fallout_2_4_13_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T28 Heavy Tank Concept">
+    <PM name="SPP-13: Tankų medžiotojai" short="T28 Heavy Tank Concept: SPP-13" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="133" opID="2" mID="13" setID="4" ID="fallout_2_4_13_main" secID="fallout_2_4_13_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T28 Heavy Tank Concept">
       <Hint>Dauguma SPP pasižymi puikia vieno šūvio žala. Žaisdami būryje koordinuokite šaudymą. Mažai priešininkų sugebėtų atsilaikyti prieš tokią jėgą.</Hint>
       <Primary fXP="750" cr="50000" slots="0" tokens="1" done="false">
         <req>•  Destroy 4 vehicles (personal/Platoon)</req>
@@ -5693,7 +5701,7 @@ or
     <PM name="SAP-9: Netiesioginė žala" short="T28 Heavy Tank Concept: SAP-9" desc="Galingi fugasiniai sviediniai ne tik daro tiesioginę žalą priešų mašinoms, bet turi ir didelę tikimybę sunaikinti modulius ar įgulos narius sprogimo skeveldromis." tMID="144" opID="2" mID="9" setID="5" ID="fallout_2_5_9_main" secID="fallout_2_5_9_add" minLvl="5" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T28 Heavy Tank Concept">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 5 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 5 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Win
@@ -6316,7 +6324,7 @@ or
 •  Survive</req>
       </Secondary>
     </PM>
-    <PM name="SPP-1: Tankų medžiotojai" short="T 55A: SPP-1" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="208" opID="3" mID="13" setID="4" ID="fallout_3_4_13_main" secID="fallout_3_4_13_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T 55A">
+    <PM name="SPP-13: Tankų medžiotojai" short="T 55A: SPP-13" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="208" opID="3" mID="13" setID="4" ID="fallout_3_4_13_main" secID="fallout_3_4_13_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T 55A">
       <Hint>Dauguma SPP pasižymi puikia vieno šūvio žala. Žaisdami būryje koordinuokite šaudymą. Mažai priešininkų sugebėtų atsilaikyti prieš tokią jėgą.</Hint>
       <Primary fXP="2000" cr="0" slots="0" tokens="1" done="false">
         <req>•  Destroy 5 vehicles (personal/Platoon)</req>
@@ -6424,7 +6432,7 @@ or
     <PM name="SAP-9: Netiesioginė žala" short="T 55A: SAP-9" desc="Galingi fugasiniai sviediniai ne tik daro tiesioginę žalą priešų mašinoms, bet turi ir didelę tikimybę sunaikinti modulius ar įgulos narius sprogimo skeveldromis." tMID="219" opID="3" mID="9" setID="5" ID="fallout_3_5_9_main" secID="fallout_3_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="T 55A">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy internal modules or injure crew members, totaling at least 8 modules or crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 8 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Remain unspotted throughout the entire battle
@@ -7050,7 +7058,7 @@ or
 •  Survive</req>
       </Secondary>
     </PM>
-    <PM name="SPP-1: Tankų medžiotojai" short="Objektas 260: SPP-1" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="283" opID="4" mID="13" setID="4" ID="fallout_4_4_13_main" secID="fallout_4_4_13_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="Objektas 260">
+    <PM name="SPP-13: Tankų medžiotojai" short="Objektas 260: SPP-13" desc="Žaisdami būryje jūs gali koncentruoti ugnį ir naikinti priešus vieną po kito. Ši misija gali būti įvykdyta žaidžiant kartu būryje arba žaidžiant vienam, bet tada bus žymiai sunkiau." tMID="283" opID="4" mID="13" setID="4" ID="fallout_4_4_13_main" secID="fallout_4_4_13_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="Objektas 260">
       <Hint>Dauguma SPP pasižymi puikia vieno šūvio žala. Žaisdami būryje koordinuokite šaudymą. Mažai priešininkų sugebėtų atsilaikyti prieš tokią jėgą.</Hint>
       <Primary fXP="4000" cr="0" slots="0" tokens="1" done="false">
         <req>•  Destroy 6 vehicles (personal/Platoon)</req>
@@ -7158,7 +7166,7 @@ or
     <PM name="SAP-9: Netiesioginė žala" short="Objektas 260: SAP-9" desc="Galingi fugasiniai sviediniai ne tik daro tiesioginę žalą priešų mašinoms, bet turi ir didelę tikimybę sunaikinti modulius ar įgulos narius sprogimo skeveldromis." tMID="294" opID="4" mID="9" setID="5" ID="fallout_4_5_9_main" secID="fallout_4_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="Ilgai lauktas pastiprinimas" reward="Objektas 260">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Destroy 10 internal modules or injure 10 crew members</req>
+        <req>•  Destroy modules or injure crew members, totaling at least 10 modules or crew members</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Remain unspotted throughout the entire battle
