--- a/data/lang/ru.xml
+++ b/data/lang/ru.xml
@@ -788,7 +788,7 @@
     <tank ID="R126_Object_730_5" sName="Об. 268 5" lName="Объект 268 Вариант 5" />
     <tank ID="R127_T44_100_P" sName="Т-44-100 (Р)" lName="Т-44-100 (Р)" />
     <tank ID="R128_KV4_Kreslavskiy" sName="КВ-4 Кресл." lName="КВ-4 Креславского" />
-    <tank ID="R129_Object_257" sName="Об. 257" lName="Объект 257" />
+    <tank ID="R129_Object_257" sName="Об. 257 П" lName="Объект 257 (П)" />
     <tank ID="R13_KV-1s" sName="КВ-1С" lName="КВ-1С" />
     <tank ID="R131_Tank_Gavalov" sName="ЛТГ" lName="ЛТГ" />
     <tank ID="R132_VNII_100LT" sName="Т-100 ЛТ" lName="Т-100 ЛТ" />
@@ -796,12 +796,18 @@
     <tank ID="R134_Object_252K" sName="Защитник" lName="Объект 252У Защитник" />
     <tank ID="R134_Object_252U" sName="Об. 252У" lName="Объект 252У" />
     <tank ID="R135_T_103" sName="Т-103" lName="Т-103" />
+    <tank ID="R139_IS_2_Sh" sName="ИС-М" lName="ИС-М" />
     <tank ID="R14_SU-5" sName="СУ-5" lName="СУ-5" />
     <tank ID="R140_M4_Loza" sName="М4-А2 Лозы" lName="М4-А2 Шерман Лозы" />
     <tank ID="R143_T_29" sName="Т-29" lName="Т-29" />
+    <tank ID="R145_Object_705_A" sName="Об. 705А" lName="Объект 705А" />
     <tank ID="R146_STG" sName="СТГ" lName="СТГ" />
     <tank ID="R146_STG_Tday" sName="Гвардеец" lName="СТГ Гвардеец" />
+    <tank ID="R148_Object_430_U" sName="Об. 430У" lName="Объект 430У" />
+    <tank ID="R149_Object_268_4" sName="Об. 268/4" lName="Объект 268 Вариант 4" />
     <tank ID="R15_S-51" sName="С-51" lName="С-51" />
+    <tank ID="R151_Object_257_2" sName="Об. 257" lName="Объект 257" />
+    <tank ID="R153_Object_705" sName="Об. 705" lName="Объект 705" />
     <tank ID="R16_SU-18" sName="СУ-18" lName="СУ-18" />
     <tank ID="R17_SU-100" sName="СУ-100" lName="СУ-100" />
     <tank ID="R18_SU-152" sName="СУ-152" lName="СУ-152" />
@@ -879,9 +885,11 @@
     <tank ID="R90_IS_4M" sName="ИС-4" lName="ИС-4" />
     <tank ID="R91_SU14_1" sName="СУ-14-1" lName="СУ-14-1" />
     <tank ID="R93_Object263" sName="Об. 263" lName="Объект 263" />
+    <tank ID="R93_Object263B" sName="Об. 263Б" lName="Объект 263Б" />
     <tank ID="R95_Object_907" sName="Об. 907" lName="Объект 907" />
     <tank ID="R95_Object_907A" sName="Об. 907A" lName="Объект 907A" />
     <tank ID="R96_Object_430" sName="Об. 430" lName="Объект 430" />
+    <tank ID="R96_Object_430B" sName="Об. 430Б" lName="Объект 430Б" />
     <tank ID="R97_Object_140" sName="Об. 140" lName="Объект 140" />
     <tank ID="R98_T44_85" sName="Т-44-85" lName="Т-44-85" />
     <tank ID="R98_T44_85M" sName="Т-44 обл." lName="Т-44 облегчённый" />
@@ -2091,7 +2099,7 @@
     <PM name="САУ-9. Бей в кость" short="«StuG IV»: САУ-9. Бей в кость" desc="Мощные осколочно-фугасные снаряды не только нанесут урон противнику, но и с большой долей вероятности выведут из строя модули и членов экипажа его машин благодаря разлетающимся при взрыве снаряда осколкам." tMID="69" opID="1" mID="9" setID="5" ID="quest_1_5_9_main" secID="quest_1_5_9_add" minLvl="4" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«StuG IV»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Вывести из строя суммарно 3 внутренних модуля или членов экипажа</req>
+        <req>•  Вывести из строя суммарно 3 любых модуля или члена экипажа</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Выжить</req>
@@ -2805,7 +2813,7 @@
     <PM name="САУ-9. Бей в кость" short="«Т28 Heavy Tank Concept»: САУ-9. Бей в кость" desc="Мощные осколочно-фугасные снаряды не только нанесут урон противнику, но и с большой долей вероятности выведут из строя модули и членов экипажа его машин благодаря разлетающимся при взрыве снаряда осколкам." tMID="144" opID="2" mID="9" setID="5" ID="quest_2_5_9_main" secID="quest_2_5_9_add" minLvl="5" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Т28 Heavy Tank Concept»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Вывести из строя суммарно 5 внутренних модулей или членов экипажа</req>
+        <req>•  Вывести из строя суммарно 5 любых модулей или членов экипажа</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Победить
@@ -3536,7 +3544,7 @@
     <PM name="САУ-9. Бей в кость" short="«T 55A»: САУ-9. Бей в кость" desc="Мощные осколочно-фугасные снаряды не только нанесут урон противнику, но и с большой долей вероятности выведут из строя модули и членов экипажа его машин благодаря разлетающимся при взрыве снаряда осколкам." tMID="219" opID="3" mID="9" setID="5" ID="quest_3_5_9_main" secID="quest_3_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«T 55A»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Вывести из строя суммарно 8 внутренних модулей или членов экипажа</req>
+        <req>•  Вывести из строя суммарно 8 любых модулей или членов экипажа</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Не быть обнаруженным в течение боя
@@ -4270,7 +4278,7 @@
     <PM name="САУ-9. Бей в кость" short="«Объект 260»: САУ-9. Бей в кость" desc="Мощные осколочно-фугасные снаряды не только нанесут урон противнику, но и с большой долей вероятности выведут из строя модули и членов экипажа его машин благодаря разлетающимся при взрыве снаряда осколкам." tMID="294" opID="4" mID="9" setID="5" ID="quest_4_5_9_main" secID="quest_4_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Объект 260»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Вывести из строя суммарно 10 внутренних модулей или членов экипажа</req>
+        <req>•  Вывести из строя суммарно 10 любых модулей или членов экипажа</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Не быть обнаруженным в течение боя
@@ -4978,7 +4986,7 @@
     <PM name="САУ-9. Бей в кость" short="«StuG IV»: САУ-9. Бей в кость" desc="Мощные осколочно-фугасные снаряды не только нанесут урон противнику, но и с большой долей вероятности выведут из строя модули и членов экипажа его машин благодаря разлетающимся при взрыве снаряда осколкам." tMID="69" opID="1" mID="9" setID="5" ID="fallout_1_5_9_main" secID="fallout_1_5_9_add" minLvl="4" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«StuG IV»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Вывести из строя суммарно 3 внутренних модуля или членов экипажа</req>
+        <req>•  Вывести из строя суммарно 3 любых модуля или члена экипажа</req>
       </Primary>
       <Secondary fXP="0" cr="35000" slots="0" tokens="1" done="false">
         <req>•  Выжить</req>
@@ -5692,7 +5700,7 @@
     <PM name="САУ-9. Бей в кость" short="«Т28 Heavy Tank Concept»: САУ-9. Бей в кость" desc="Мощные осколочно-фугасные снаряды не только нанесут урон противнику, но и с большой долей вероятности выведут из строя модули и членов экипажа его машин благодаря разлетающимся при взрыве снаряда осколкам." tMID="144" opID="2" mID="9" setID="5" ID="fallout_2_5_9_main" secID="fallout_2_5_9_add" minLvl="5" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Т28 Heavy Tank Concept»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Вывести из строя суммарно 5 внутренних модулей или членов экипажа</req>
+        <req>•  Вывести из строя суммарно 5 любых модулей или членов экипажа</req>
       </Primary>
       <Secondary fXP="0" cr="75000" slots="0" tokens="1" done="false">
         <req>•  Победить
@@ -6423,7 +6431,7 @@
     <PM name="САУ-9. Бей в кость" short="«T 55A»: САУ-9. Бей в кость" desc="Мощные осколочно-фугасные снаряды не только нанесут урон противнику, но и с большой долей вероятности выведут из строя модули и членов экипажа его машин благодаря разлетающимся при взрыве снаряда осколкам." tMID="219" opID="3" mID="9" setID="5" ID="fallout_3_5_9_main" secID="fallout_3_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«T 55A»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Вывести из строя суммарно 8 внутренних модулей или членов экипажа</req>
+        <req>•  Вывести из строя суммарно 8 любых модулей или членов экипажа</req>
       </Primary>
       <Secondary fXP="0" cr="150000" slots="0" tokens="1" done="false">
         <req>•  Не быть обнаруженным в течение боя
@@ -7157,7 +7165,7 @@
     <PM name="САУ-9. Бей в кость" short="«Объект 260»: САУ-9. Бей в кость" desc="Мощные осколочно-фугасные снаряды не только нанесут урон противнику, но и с большой долей вероятности выведут из строя модули и членов экипажа его машин благодаря разлетающимся при взрыве снаряда осколкам." tMID="294" opID="4" mID="9" setID="5" ID="fallout_4_5_9_main" secID="fallout_4_5_9_add" minLvl="6" maxLvl="10" campID="1" camp="«Долгожданное подкрепление»" reward="«Объект 260»">
       <Hint>?empty?</Hint>
       <Primary fXP="0" cr="0" slots="0" tokens="1" done="false">
-        <req>•  Вывести из строя суммарно 10 внутренних модулей или членов экипажа</req>
+        <req>•  Вывести из строя суммарно 10 любых модулей или членов экипажа</req>
       </Primary>
       <Secondary fXP="0" cr="200000" slots="0" tokens="1" done="false">
         <req>•  Не быть обнаруженным в течение боя
