--- a/data/lang/zh.xml
+++ b/data/lang/zh.xml
@@ -788,7 +788,7 @@
     <tank ID="R126_Object_730_5" sName="268工程V型" lName="268工程V型" />
     <tank ID="R127_T44_100_P" sName="T-44-100 (R)" lName="T-44-100 (R)" />
     <tank ID="R128_KV4_Kreslavskiy" sName="KV-4 K型" lName="KV-4 K型" />
-    <tank ID="R129_Object_257" sName="257工程" lName="257工程" />
+    <tank ID="R129_Object_257" sName="257工程(P)" lName="257工程(P)" />
     <tank ID="R13_KV-1s" sName="KV-1S" lName="KV-1S" />
     <tank ID="R131_Tank_Gavalov" sName="LTG" lName="LTG" />
     <tank ID="R132_VNII_100LT" sName="T-100 LT" lName="T-100 LT" />
@@ -796,18 +796,18 @@
     <tank ID="R134_Object_252K" sName="252工程" lName="252工程" />
     <tank ID="R134_Object_252U" sName="252工程" lName="252工程" />
     <tank ID="R135_T_103" sName="T-103" lName="T-103" />
-    <tank ID="R139_IS_2_Sh" />
+    <tank ID="R139_IS_2_Sh" sName="IS-M" lName="IS-M" />
     <tank ID="R14_SU-5" sName="SU-5" lName="SU-5" />
     <tank ID="R140_M4_Loza" sName="M4A2 \" lName="M4A2 \" />
     <tank ID="R143_T_29" sName="T-29" lName="T-29" />
-    <tank ID="R145_Object_705_A" />
+    <tank ID="R145_Object_705_A" sName="705工程A" lName="705工程A" />
     <tank ID="R146_STG" sName="STG" lName="STG" />
     <tank ID="R146_STG_Tday" sName="STG G型" lName="STG G型" />
-    <tank ID="R148_Object_430_U" />
-    <tank ID="R149_Object_268_4" />
+    <tank ID="R148_Object_430_U" sName="430工程U" lName="430工程U" />
+    <tank ID="R149_Object_268_4" sName="268工程IV型" lName="268工程IV型" />
     <tank ID="R15_S-51" sName="S-51" lName="S-51" />
-    <tank ID="R151_Object_257_2" />
-    <tank ID="R153_Object_705" />
+    <tank ID="R151_Object_257_2" sName="257工程" lName="257工程" />
+    <tank ID="R153_Object_705" sName="705工程" lName="705工程" />
     <tank ID="R16_SU-18" sName="SU-18" lName="SU-18" />
     <tank ID="R17_SU-100" sName="SU-100" lName="SU-100" />
     <tank ID="R18_SU-152" sName="SU-152" lName="SU-152" />
@@ -884,12 +884,12 @@
     <tank ID="R89_SU122_44" sName="SU-122-44" lName="SU-122-44" />
     <tank ID="R90_IS_4M" sName="IS-4" lName="IS-4" />
     <tank ID="R91_SU14_1" sName="SU-14-1" lName="SU-14-1" />
-    <tank ID="R93_Object263" />
-    <tank ID="R93_Object263B" />
+    <tank ID="R93_Object263" sName="263工程" lName="263工程" />
+    <tank ID="R93_Object263B" sName="263工程B" lName="263工程B" />
     <tank ID="R95_Object_907" sName="907工程" lName="907工程" />
     <tank ID="R95_Object_907A" sName="907工程A" lName="907工程A" />
-    <tank ID="R96_Object_430" />
-    <tank ID="R96_Object_430B" />
+    <tank ID="R96_Object_430" sName="430工程" lName="430工程" />
+    <tank ID="R96_Object_430B" sName="430工程B" lName="430工程B" />
     <tank ID="R97_Object_140" sName="140工程" lName="140工程" />
     <tank ID="R98_T44_85" sName="T-44-85" lName="T-44-85" />
     <tank ID="R98_T44_85M" sName="T-44轻型" lName="T-44轻型" />
